# visualstudio-devcontainer-cpp

./: .gitignore  CMakeLists.txt  README.md
MyCppApp/: CMakeLists.txt  MyCppApp.cpp  MyCppApp.h
